tests/requests/invalid/003.py
from gunicorn import InvalidRequestMethod

request = InvalidRequestMethod
